library retrieval and generation ready

--- a/v0/client/action_client.ipynb
+++ b/v0/client/action_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,9 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "class RetrievalRequest(BaseModel):\n",
     "    chat_history: List[Dict[str, str]]\n",
     "    top_k: int = 5\n",
-    "\n",
     "\n",
     "# Rest of your existing code...\n",
     "class Settings:\n",
@@ -38,9 +33,6 @@
     "    thought: str = Field(..., description=\"Thoughts about the task that needs to be solved and how to resolve it.\")\n",
     "    is_action_needed: bool = Field(..., description=\"Whether an action is needed to resolve the task.\")\n",
     "    tool_description: str = Field(..., description=\"Description of the tool that can be used to resolve the task.\")\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "class ActionDataGenerator(BaseModel):\n",
     "    \"\"\"Action data for general use of action\"\"\"\n",
@@ -255,21 +247,9 @@
     "    \n",
     "    def build_action_execution_payload(self, action_data: ActionData) -> ActionExecutionPayload:\n",
     "        print(\"\\n\\nChat History Pre Params:\\n\", self.chat_history)\n",
-    "        temp = [{\"role\": \"user\", \"content\": \"\"\"Please perform the matrix multiplication of A x B and return the result, here are the variables:\n",
-    "A = [[1, 2, 3, 4, 5],\n",
-    "        [6, 7, 7, 9, 10],\n",
-    "        [11, 12, 13, 14, 15],\n",
-    "        [16, 17, 7, 19, 20],\n",
-    "        [21, 22, 23, 24, 25]]\n",
-    "B = [[1, 2, 3, 4, 5],\n",
-    "        [6, 7, 8, 9, 10],\n",
-    "        [11, 12, 7, 14, 15],\n",
-    "        [16, 17, 18, 19, 20],\n",
-    "        [21, 22, 23, 24, 25]]\"\"\"}]\n",
     "        action_params = self.client.beta.chat.completions.parse(\n",
     "            model=\"gpt-4o-mini\",\n",
-    "            # messages=self.chat_history[:-1],\n",
-    "            messages=temp,\n",
+    "            messages=self.chat_history[:-1],\n",
     "            response_format={\n",
     "                \"type\": \"json_schema\",\n",
     "                \"json_schema\": {\n",
@@ -354,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -364,80 +344,28 @@
       "\n",
       "\n",
       "produce_action_thought:\n",
-      " thought='To perform matrix multiplication of A x B, I need to iterate through the rows of matrix A and the columns of matrix B, computing the dot product for each element in the resulting matrix.' is_action_needed=True tool_description='Matrix multiplication tool that takes two 2D lists (matrices) and returns their product as another 2D list.'\n",
+      " thought='To perform the matrix multiplication of A and B, I need to follow the rules of matrix multiplication, which involves taking the dot product of rows from A with columns from B. I will calculate the resulting matrix step by step.' is_action_needed=True tool_description='I can use a computation tool or algorithm to perform matrix multiplication.'\n",
       "\n",
       "\n",
       "retrieve_actions:\n",
-      " []\n",
-      "\n",
-      "\n",
-      "create_action_data:\n",
-      " {\n",
-      "    \"input_json_schema\": \"{\\\"type\\\": \\\"object\\\",\\\"description\\\": \\\"Matrices for multiplication\\\",\\\"properties\\\": {\\\"A\\\": {\\\"type\\\": \\\"array\\\",\\\"description\\\": \\\"The first matrix\\\",\\\"items\\\": {\\\"type\\\": \\\"array\\\",\\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}},\\\"B\\\": {\\\"type\\\": \\\"array\\\",\\\"description\\\": \\\"The second matrix\\\",\\\"items\\\": {\\\"type\\\": \\\"array\\\",\\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}}}}\",\n",
-      "    \"output_json_schema\": \"{\\\"type\\\": \\\"array\\\",\\\"description\\\": \\\"Resultant matrix after multiplying A and B\\\",\\\"items\\\": {\\\"type\\\": \\\"array\\\",\\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}}\",\n",
-      "    \"code\": \"import numpy as np\\n\\ndef action(A: list, B: list) -> list:\\n    # Convert lists to numpy arrays for easier matrix multiplication\\n    mat_a = np.array(A)\\n    mat_b = np.array(B)\\n    # Perform the matrix multiplication\\n    result = np.dot(mat_a, mat_b)\\n    # Convert the result back to a list and return\\n    return result.tolist()\",\n",
-      "    \"test\": \"A = [[1, 2, 3, 4, 5],\\n     [6, 7, 7, 9, 10],\\n     [11, 12, 13, 14, 15],\\n     [16, 17, 7, 19, 20],\\n     [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n     [6, 7, 8, 9, 10],\\n     [11, 12, 7, 14, 15],\\n     [16, 17, 18, 19, 20],\\n     [21, 22, 23, 24, 25]]\\n\\nresult = action(A, B)\\n\\n# We assert the result is a proper matrix size\\nassert isinstance(result, list)\\nassert len(result) == len(A)  # The number of rows\\nassert len(result[0]) == len(B[0])  # The number of columns\\n\\n# For specific known values in matrix product, we can check few entries (as an example)\\nassert result[0][0] == (1*1 + 2*6 + 3*11 + 4*16 + 5*21)\\nassert result[1][1] == (6*2 + 7*7 + 7*12 + 9*17 + 10*22)\"\n",
-      "}\n",
-      "\n",
-      "\n",
-      "FAILED schema validation Error code: 400 - {'error': {'message': \"Invalid schema for response_format 'action_items': In context=(), 'required' is required to be supplied and to be an array including every key in properties. Missing 'A'.\", 'type': 'invalid_request_error', 'param': 'response_format', 'code': None}}\n",
-      "\n",
-      "\n",
-      "RETRY 0 FAILED Error code: 400 - {'error': {'message': \"Invalid schema for response_format 'action_items': In context=(), 'required' is required to be supplied and to be an array including every key in properties. Missing 'A'.\", 'type': 'invalid_request_error', 'param': 'response_format', 'code': None}}\n",
-      "\n",
-      "\n",
-      "create_action_data:\n",
-      " {\n",
-      "    \"input_json_schema\": \"{\\\"type\\\": \\\"object\\\", \\\"description\\\": \\\"Matrices for multiplication\\\", \\\"properties\\\": {\\\"A\\\": {\\\"type\\\": \\\"array\\\", \\\"description\\\": \\\"The first matrix\\\", \\\"items\\\": {\\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}}, \\\"B\\\": {\\\"type\\\": \\\"array\\\", \\\"description\\\": \\\"The second matrix\\\", \\\"items\\\": {\\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}}}, \\\"required\\\": [\\\"A\\\", \\\"B\\\"], \\\"additionalProperties\\\": false}\",\n",
-      "    \"output_json_schema\": \"{\\\"type\\\": \\\"array\\\", \\\"description\\\": \\\"Resultant matrix after multiplying A and B\\\", \\\"items\\\": {\\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}, \\\"additionalProperties\\\": false}\",\n",
-      "    \"code\": \"import numpy as np\\n\\ndef action(A: list, B: list) -> list:\\n    # Convert lists to numpy arrays for easier matrix multiplication\\n    mat_a = np.array(A)\\n    mat_b = np.array(B)\\n    # Perform the matrix multiplication\\n    result = np.dot(mat_a, mat_b)\\n    # Convert the result back to a list and return\\n    return result.tolist()\",\n",
-      "    \"test\": \"A = [[1, 2, 3, 4, 5],\\n     [6, 7, 7, 9, 10],\\n     [11, 12, 13, 14, 15],\\n     [16, 17, 7, 19, 20],\\n     [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n     [6, 7, 8, 9, 10],\\n     [11, 12, 7, 14, 15],\\n     [16, 17, 18, 19, 20],\\n     [21, 22, 23, 24, 25]]\\n\\nresult = action(A, B)\\n\\n# We assert the result is a proper matrix size\\nassert isinstance(result, list)\\nassert len(result) == len(A)  # The number of rows\\nassert len(result[0]) == len(B[0])  # The number of columns\\n\\n# For specific known values in matrix product, we can check few entries (as an example)\\nassert result[0][0] == (1*1 + 2*6 + 3*11 + 4*16 + 5*21)\\nassert result[1][1] == (6*2 + 7*7 + 7*12 + 9*17 + 10*22)\"\n",
-      "}\n",
-      "\n",
-      "\n",
-      "PASSED schema validation\n",
-      "\n",
-      "\n",
-      "executing:\n",
-      "\n",
-      " import numpy as np\n",
-      "\n",
-      "def action(A: list, B: list) -> list:\n",
-      "    # Convert lists to numpy arrays for easier matrix multiplication\n",
-      "    mat_a = np.array(A)\n",
-      "    mat_b = np.array(B)\n",
-      "    # Perform the matrix multiplication\n",
-      "    result = np.dot(mat_a, mat_b)\n",
-      "    # Convert the result back to a list and return\n",
-      "    return result.tolist()\n",
-      "A = [[1, 2, 3, 4, 5],\n",
-      "     [6, 7, 7, 9, 10],\n",
-      "     [11, 12, 13, 14, 15],\n",
-      "     [16, 17, 7, 19, 20],\n",
-      "     [21, 22, 23, 24, 25]]\n",
-      "B = [[1, 2, 3, 4, 5],\n",
-      "     [6, 7, 8, 9, 10],\n",
-      "     [11, 12, 7, 14, 15],\n",
-      "     [16, 17, 18, 19, 20],\n",
-      "     [21, 22, 23, 24, 25]]\n",
-      "\n",
-      "result = action(A, B)\n",
-      "\n",
-      "# We assert the result is a proper matrix size\n",
-      "assert isinstance(result, list)\n",
-      "assert len(result) == len(A)  # The number of rows\n",
-      "assert len(result[0]) == len(B[0])  # The number of columns\n",
-      "\n",
-      "# For specific known values in matrix product, we can check few entries (as an example)\n",
-      "assert result[0][0] == (1*1 + 2*6 + 3*11 + 4*16 + 5*21)\n",
-      "assert result[1][1] == (6*2 + 7*7 + 7*12 + 9*17 + 10*22)\n",
-      "\n",
-      "\n",
-      "PASSED\n",
-      "\n",
-      "\n",
-      "updated_action:\n",
-      " True\n",
+      " [\n",
+      "    {\n",
+      "        \"input_json_schema\": \"{\\\"type\\\": \\\"object\\\", \\\"description\\\": \\\"Matrices for multiplication\\\", \\\"properties\\\": {\\\"A\\\": {\\\"type\\\": \\\"array\\\", \\\"description\\\": \\\"The first matrix\\\", \\\"items\\\": {\\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}}, \\\"B\\\": {\\\"type\\\": \\\"array\\\", \\\"description\\\": \\\"The second matrix\\\", \\\"items\\\": {\\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}}}, \\\"required\\\": [\\\"A\\\", \\\"B\\\"], \\\"additionalProperties\\\": false}\",\n",
+      "        \"output_json_schema\": \"{\\\"type\\\": \\\"array\\\", \\\"description\\\": \\\"Resultant matrix after multiplying A and B\\\", \\\"items\\\": {\\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"integer\\\"}}, \\\"additionalProperties\\\": false}\",\n",
+      "        \"code\": \"import numpy as np\\n\\ndef action(A: list, B: list) -> list:\\n    # Convert lists to numpy arrays for easier matrix multiplication\\n    mat_a = np.array(A)\\n    mat_b = np.array(B)\\n    # Perform the matrix multiplication\\n    result = np.dot(mat_a, mat_b)\\n    # Convert the result back to a list and return\\n    return result.tolist()\",\n",
+      "        \"test\": \"A = [[1, 2, 3, 4, 5],\\n     [6, 7, 7, 9, 10],\\n     [11, 12, 13, 14, 15],\\n     [16, 17, 7, 19, 20],\\n     [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n     [6, 7, 8, 9, 10],\\n     [11, 12, 7, 14, 15],\\n     [16, 17, 18, 19, 20],\\n     [21, 22, 23, 24, 25]]\\n\\nresult = action(A, B)\\n\\n# We assert the result is a proper matrix size\\nassert isinstance(result, list)\\nassert len(result) == len(A)  # The number of rows\\nassert len(result[0]) == len(B[0])  # The number of columns\\n\\n# For specific known values in matrix product, we can check few entries (as an example)\\nassert result[0][0] == (1*1 + 2*6 + 3*11 + 4*16 + 5*21)\\nassert result[1][1] == (6*2 + 7*7 + 7*12 + 9*17 + 10*22)\",\n",
+      "        \"chat_history\": [\n",
+      "            {\n",
+      "                \"content\": \"Please perform the matrix multiplication of A x B and return the result, here are the variables:\\nA = [[1, 2, 3, 4, 5],\\n        [6, 7, 7, 9, 10],\\n        [11, 12, 13, 14, 15],\\n        [16, 17, 7, 19, 20],\\n        [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n        [6, 7, 8, 9, 10],\\n        [11, 12, 7, 14, 15],\\n        [16, 17, 18, 19, 20],\\n        [21, 22, 23, 24, 25]]\",\n",
+      "                \"role\": \"user\"\n",
+      "            },\n",
+      "            {\n",
+      "                \"content\": \"\\n                            THOUGHT:\\n                                To perform matrix multiplication of A x B, I need to iterate through the rows of matrix A and the columns of matrix B, computing the dot product for each element in the resulting matrix.\\n                            TOOL DESCRIPTION:\\n                                Matrix multiplication tool that takes two 2D lists (matrices) and returns their product as another 2D list.\",\n",
+      "                \"role\": \"assistant\"\n",
+      "            }\n",
+      "        ]\n",
+      "    }\n",
+      "]\n",
       "\n",
       "\n",
       "action_data:\n",
@@ -448,19 +376,19 @@
       "    \"test\": \"A = [[1, 2, 3, 4, 5],\\n     [6, 7, 7, 9, 10],\\n     [11, 12, 13, 14, 15],\\n     [16, 17, 7, 19, 20],\\n     [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n     [6, 7, 8, 9, 10],\\n     [11, 12, 7, 14, 15],\\n     [16, 17, 18, 19, 20],\\n     [21, 22, 23, 24, 25]]\\n\\nresult = action(A, B)\\n\\n# We assert the result is a proper matrix size\\nassert isinstance(result, list)\\nassert len(result) == len(A)  # The number of rows\\nassert len(result[0]) == len(B[0])  # The number of columns\\n\\n# For specific known values in matrix product, we can check few entries (as an example)\\nassert result[0][0] == (1*1 + 2*6 + 3*11 + 4*16 + 5*21)\\nassert result[1][1] == (6*2 + 7*7 + 7*12 + 9*17 + 10*22)\",\n",
       "    \"chat_history\": [\n",
       "        {\n",
-      "            \"role\": \"user\",\n",
-      "            \"content\": \"Please perform the matrix multiplication of A x B and return the result, here are the variables:\\nA = [[1, 2, 3, 4, 5],\\n        [6, 7, 7, 9, 10],\\n        [11, 12, 13, 14, 15],\\n        [16, 17, 7, 19, 20],\\n        [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n        [6, 7, 8, 9, 10],\\n        [11, 12, 7, 14, 15],\\n        [16, 17, 18, 19, 20],\\n        [21, 22, 23, 24, 25]]\"\n",
+      "            \"content\": \"Please perform the matrix multiplication of A x B and return the result, here are the variables:\\nA = [[1, 2, 3, 4, 5],\\n        [6, 7, 7, 9, 10],\\n        [11, 12, 13, 14, 15],\\n        [16, 17, 7, 19, 20],\\n        [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n        [6, 7, 8, 9, 10],\\n        [11, 12, 7, 14, 15],\\n        [16, 17, 18, 19, 20],\\n        [21, 22, 23, 24, 25]]\",\n",
+      "            \"role\": \"user\"\n",
       "        },\n",
       "        {\n",
-      "            \"role\": \"assistant\",\n",
-      "            \"content\": \"\\n                            THOUGHT:\\n                                To perform matrix multiplication of A x B, I need to iterate through the rows of matrix A and the columns of matrix B, computing the dot product for each element in the resulting matrix.\\n                            TOOL DESCRIPTION:\\n                                Matrix multiplication tool that takes two 2D lists (matrices) and returns their product as another 2D list.\"\n",
+      "            \"content\": \"\\n                            THOUGHT:\\n                                To perform matrix multiplication of A x B, I need to iterate through the rows of matrix A and the columns of matrix B, computing the dot product for each element in the resulting matrix.\\n                            TOOL DESCRIPTION:\\n                                Matrix multiplication tool that takes two 2D lists (matrices) and returns their product as another 2D list.\",\n",
+      "            \"role\": \"assistant\"\n",
       "        }\n",
       "    ]\n",
       "}\n",
       "\n",
       "\n",
       "Chat History Pre Params:\n",
-      " [{'role': 'user', 'content': 'Please perform the matrix multiplication of A x B and return the result, here are the variables:\\nA = [[1, 2, 3, 4, 5],\\n        [6, 7, 7, 9, 10],\\n        [11, 12, 13, 14, 15],\\n        [16, 17, 7, 19, 20],\\n        [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n        [6, 7, 8, 9, 10],\\n        [11, 12, 7, 14, 15],\\n        [16, 17, 18, 19, 20],\\n        [21, 22, 23, 24, 25]]'}, {'role': 'assistant', 'content': '\\n                            THOUGHT:\\n                                To perform matrix multiplication of A x B, I need to iterate through the rows of matrix A and the columns of matrix B, computing the dot product for each element in the resulting matrix.\\n                            TOOL DESCRIPTION:\\n                                Matrix multiplication tool that takes two 2D lists (matrices) and returns their product as another 2D list.'}]\n",
+      " [{'role': 'user', 'content': 'Please perform the matrix multiplication of A x B and return the result, here are the variables:\\nA = [[1, 2, 3, 4, 5],\\n        [6, 7, 7, 9, 10],\\n        [11, 12, 13, 14, 15],\\n        [16, 17, 7, 19, 20],\\n        [21, 22, 23, 24, 25]]\\nB = [[1, 2, 3, 4, 5],\\n        [6, 7, 8, 9, 10],\\n        [11, 12, 7, 14, 15],\\n        [16, 17, 18, 19, 20],\\n        [21, 22, 23, 24, 25]]'}, {'role': 'assistant', 'content': '\\n                            THOUGHT:\\n                                To perform the matrix multiplication of A and B, I need to follow the rules of matrix multiplication, which involves taking the dot product of rows from A with columns from B. I will calculate the resulting matrix step by step.\\n                            TOOL DESCRIPTION:\\n                                I can use a computation tool or algorithm to perform matrix multiplication.'}]\n",
       "\n",
       "\n",
       "params:\n",
@@ -477,11 +405,9 @@
       "479 & 518 & 515 & 596 & 635 \\\\\n",
       "765 & 830 & 817 & 960 & 1025 \\\\\n",
       "919 & 998 & 1035 & 1156 & 1235 \\\\\n",
-      "1315 & 1430 & 1407 & 1660 & 1775 \\\\\n",
+      "1315 & 1430 & 1407 & 1660 & 1775 \n",
       "\\end{bmatrix}\n",
-      "\\] \n",
-      "\n",
-      "This resulting matrix contains the products of corresponding rows from matrix \\( A \\) and columns from matrix \\( B \\).\n"
+      "\\]\n"
      ]
     }
    ],
