expose ActionCollectiveRequest for function calling use

--- a/v0/client/action_client.ipynb
+++ b/v0/client/action_client.ipynb
@@ -465,6 +465,36 @@
     "\n",
     "print(np.dot(A, B))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'description': 'asdf',\n",
+       " 'properties': {'a': {'description': 'The first number',\n",
+       "   'title': 'A',\n",
+       "   'type': 'integer'}},\n",
+       " 'required': ['a'],\n",
+       " 'title': 'Temp',\n",
+       " 'type': 'object'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Temp(BaseModel):\n",
+    "    \"\"\"asdf\"\"\"\n",
+    "    a: int = Field(..., description=\"The first number\")\n",
+    "\n",
+    "Temp.model_json_schema()\n"
+   ]
   }
  ],
  "metadata": {
