--- a/v0/client/action_client.ipynb
+++ b/v0/client/action_client.ipynb
@@ -468,32 +468,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'description': 'asdf',\n",
-       " 'properties': {'a': {'description': 'The first number',\n",
-       "   'title': 'A',\n",
-       "   'type': 'integer'}},\n",
-       " 'required': ['a'],\n",
-       " 'title': 'Temp',\n",
-       " 'type': 'object'}"
+       "{'type': 'function',\n",
+       " 'function': {'name': 'Temp',\n",
+       "  'strict': True,\n",
+       "  'parameters': {'description': 'asdf',\n",
+       "   'properties': {'a': {'description': 'The first number',\n",
+       "     'title': 'A',\n",
+       "     'type': 'integer'}},\n",
+       "   'required': ['a'],\n",
+       "   'title': 'Temp',\n",
+       "   'type': 'object',\n",
+       "   'additionalProperties': False},\n",
+       "  'description': 'asdf'}}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import openai\n",
     "class Temp(BaseModel):\n",
     "    \"\"\"asdf\"\"\"\n",
     "    a: int = Field(..., description=\"The first number\")\n",
     "\n",
-    "Temp.model_json_schema()\n"
+    "Temp.model_json_schema()\n",
+    "\n",
+    "openai.pydantic_function_tool(Temp)"
    ]
   }
  ],
